# FFmpeg-OpenGL-Starter

./: CMakeLists.txt  run.sh
lib/FFmpeg/: CMakeLists.txt
src/: Bar.cpp  Bar.h  PCM.cpp  PCM.h  colors.h  define.h  draw.cpp  draw.h  extension.cpp  extension.h  helpers.h  main.cpp  plug.cpp  plug.h  test.cpp  test.h
